# AI-Nexus

./: .dockerignore  .gitignore  COMPLETE_SUMMARY.md  Dockerfile  GPU_SETUP.md  LICENSE  PROJECT_COMPLETE.md  README.md  STATUS.md  WEEK1_COMPLETION_REPORT.md  WEEK1_GPU_COMPLETE.md  WEEK2_KUBERNETES_PLAN.md  __init__.py  ai_nexus.py  demo_gpu.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements.txt  setup.py
api/endpoints/: llm_endpoints.py  rag_endpoints.py
artp/: Cargo.toml  build.rs
artp/proto/: artp_service.proto
artp/src/: artp.rs  grpc_service.rs  lib.rs  main.rs
config/: config.yaml  prometheus.yml
core/: __init__.py  alerting.py  config.py  crypto.py  logger.py  metrics.py  rate_limiting.py  security.py  usage_tracking.py  validation.py
deploy/: aws-deployment.sh  gcp-deployment.sh
docs/: ENTERPRISE_DEPLOYMENT.md  KUBERNETES_DEPLOYMENT.md  WEEK2_COMPLETION_REPORT.md  WEEK3_REPORT.md  WEEK4_REPORT.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
k8s/: hpa.yaml
k8s/manifests/: namespace.yaml  network-policies.yaml  nvidia-device-plugin.yaml  priority-class.yaml  qdrant.yaml  rbac.yaml  resource-quota.yaml
proto/: artp_service.proto  ml_service.proto  nlp_service.proto
scripts/: benchmark.py  init-db.sql  setup.py  start_node.py  validate.py
services/api/: __init__.py  api_server.py
tests/: load_tests.py  test_advanced_features.py  test_blockchain.py  test_core.py  test_distributed.py  test_enterprise.py  test_gpu.py  test_llm.py  test_ml.py  test_nlp.py  test_rag.py  test_vectordb.py
(+52 files in other folders)
