[package]
name = "artp"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.10"
rustls = "0.21"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
smallvec = "1.13"
fixed = "1.23"
pathfinding = "4.3"
kyber = "0.1"  # Placeholder for Kyber512
dashmap = "5.5"
futures = "0.3"
tonic = "0.9"
prost = "0.11"
tokio-stream = "0.1"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.9"